--- a/pages/login.html
+++ b/pages/login.html
@@ -41,12 +41,36 @@
             </div>
         </nav>
 
-        <section id="gtco-banner" data-section="home" data-stellar-background-ratio="0.5">
+        <section id="gtco-banner" data-section="banner" data-stellar-background-ratio="0.5">
             <div class="overlay"></div>
             <div class="container">
                 <div class="row">
-                    <div class="col-md-12 col-md-offset-0 text-center">
-                        <h1 class="animate-box fadeIn animated-fast" data-animate-effect="fadeIn"><b>S</b>istema de <b>G</b>estión de <b>C</b>alidad</h1>
+                    <div class="col-md-12 col-md-offset-0 text-center heading">
+                        <h1 class="animate-box fadeIn animated-fast sub" data-animate-effect="fadeIn"><b>S</b>istema de <b>G</b>estión de <b>C</b>alidad</h1>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="gtco-contact" data-section="contact">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 col-md-push-3 animate-box fadeIn animated-fast">
+                        <form action="#">
+                            <div class="form-group">
+                                <h3>Usuario:</h3>
+                                <label for="user" class="sr-only"></label>
+                                <input type="text" class="form-control" placeholder="Introduzca su nombre de usuario" id="user">
+                            </div>
+                            <div class="form-group">
+                                <h3>Contraseña:</h3>
+                                <label for="password" class="sr-only"></label>
+                                <input type="password" class="form-control" placeholder="Introduzca su contraseña" id="password">
+                            </div>
+                            <div class="form-group col-md-12 col-md-push-4 btnSubmit">
+                                <input type="submit" value="Acceder" class="btn btn-primary">
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
