favicon, login completo, interfaz indexForms

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="José Luis Guerra Díaz 2ºDAW" />
 
+    <link rel="icon" type="image/jpg" href="images/favicon.jpg">
     <!-- Animate.css -->
     <link rel="stylesheet" href="css/animate.css">
     <!-- Icomoon Icon Fonts-->
