--- a/pages/indexForms.html
+++ b/pages/indexForms.html
@@ -49,7 +49,7 @@
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Informes</a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                    <a class="dropdown-item" href="#">Generar</a>
+                                    <a class="dropdown-item" href="javascript:abrirGenerarInforme();">Generar</a>
                                 </div>
                             </li>
                             <li class="nav-item dropdown">
@@ -94,11 +94,14 @@
     <script src="../js/bootstrap.min.js"></script>
     <!-- Waypoints -->
     <script src="../js/jquery.waypoints.min.js"></script>
+    <!-- Tablas Consultar -->
     <script src="../js/tablesort.js"></script>
     <script src="../js/sorts/tablesort.date.js"></script>
     <script src="../js/sorts/tablesort.dotsep.js"></script>
     <script src="../js/sorts/tablesort.filesize.js"></script>
     <script src="../js/sorts/tablesort.number.js"></script>
+    <!-- Documento Generar -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.4/jspdf.debug.js"></script>
     <!-- Main -->
     <script src="../js/indexForms.js"></script>
 
